--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+scraper = "0.14.0"
 tantivy = "0.19.1"
 warc = "0.3.1"
 zstd = "0.12.2"
