--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 scraper = "0.14.0"
+serde = "1.0.152"
+serde_json = "1.0.91"
 tantivy = "0.19.1"
 warc = "0.3.1"
 zstd = "0.12.2"
